<resources>
    <string name="app_name">MAU</string>
    <string name="level1_q" translatable="false">level</string>
    <string name="level1_o" translatable="false">level</string>
    <string name="level1_a" translatable="false">level</string>
    <string-array name="level2_q" formatted="false">
        <item>What is the molarity (% w/V) of a solution obtained by dissolving 1.92 g of NaOH in 100 ml of water solution?</item>
        <item>How many ml of a 0.48 M NaOH solution are needed to neutralize 100 ml of a 0.12 M HCl solution?</item>
        <item>If you have picture with a length of  2100 pixels and you print it on a laser jet printer (300 DPI), how wide will the picture become on paper?</item>
        <item>What is another word for “centre of mass”?</item>
        <item>The golden ratio divides a line in two parts of unequal size. If the larger part is called a and the smaller part b, which of the following equations is true?</item>
        <item>Only one of the following lists is organised in rising order(from the lowest to the highest) for the water used in their production :</item>
        <item>What is the percentage of water used for the production of soy compared to beef meat production?</item>
        <item>Which of the following is NOT a scripting language used on the web?</item>
        <item>By default a real number is treated as a</item>
        <item>How do we determine the centre of gravity of a body with irregular shape?</item>
        <item>With which tool could i make an ICT game?</item>
        <item>Even if the universe expands, the ratio between the recessional velocity from one galaxy to another and their distance that obviously is getting bigger and bigger remains constant, because of</item>
        <item>In order to measure something we need a measure unit. The measure unit in music is</item>
        <item>The researchers concluded that the moon moves away slightly from Earth, the distance between them increasing by 3,8 cm each year. Approximate what is the distance that the moon moved away from Earth in the last 150 years?</item>
        <item>A sample of a gram of Carbon is removed from a piece of wood taken from an ancient object. The decay rate of Carbon-14 in the sample is 12,6 counts per second. The decay rate in a growing tree is 15,3 counts per second. How old is the object?</item>
        <item>The binary code representation of the number 233 is:</item>
        <item>The octal representation of the binary number 11011 is:</item>
        <item>Greenhouse effect is the main cause of climate change. Which of the following gases contributes to the greenhouse effect most?</item>
        <item>In Poland, the area where the air pollution exceeds air quality limits is inhabited by approximately 20% of people. Knowing that the population of Poland is 38 million calculate the number of people who breathe polluted air.</item>
        <item>What does abs(x) stand for?</item>
        <item>The Liberty Bridge in Budapest is 333.6 m long. My average step is 80 cm long. How many steps does it take for me in average to walk across the Liberty Bridge?</item>
        <item>Compare the focus distance with Sun size</item>
        <item>Why are hundredths of a second up to 99 while seconds are up to 59?</item>
        <item>Minutes and seconds are considered on the base of:</item>
        <item>Annual distribution of the number of events and the burnt area in Portugal between 2003 and 2013. The year which recorded the major number of events was:</item>
        <item>The longitude difference between A place and B place is 240. What is the solar time difference between them?</item>
        <item>In a map with scale 1:1.000.000 we measure a 50cm distance The real distance is:</item>
        <item>Which of the analysis of statistical techniques not used:</item>
    </string-array>
    <string-array name="level2_o" formatted="false">
        <item>0,48 M</item><item>0,60 M</item><item>1 M</item><item>0,77 M</item>

        <item>10 ml</item><item>60 ml</item><item>25 ml</item><item>35 ml</item>

        <item>7 inches</item><item>0,14 inches</item><item>14 inches</item><item>0,7 inches</item>

        <item>Mass</item><item>The center of gravity</item><item>The gravitational force</item><item>The gravitational acceleration</item>

        <item>ab=ba</item><item>ab=a+ba</item><item>ba=ba+b</item><item>ab=a+ba</item>

        <item>cheese, soy, potato, cereals</item><item>soy, potato, cheese, cereals</item><item>cereals, cheese, soy, potato</item><item>cheese, potato, cereals, soy</item>

        <item>32%</item><item>12%</item><item>26%</item><item>68%</item>

        <item>JavaScript</item><item>FogScript</item><item>ASP</item><item>VBScript</item>

        <item>float</item><item>double</item><item>long double</item><item>far double</item>

        <item>with pin and plumb</item><item>with the spirit-level</item><item>with the ruler</item><item>A and C</item>

        <item>ClamAV</item><item>Audacity</item><item>Scratch</item><item>Chromium</item>

        <item>The gravity</item><item>The central angle that remains constant</item><item>The stable mass</item><item>Humble law</item>

        <item>The number of bits per minute</item><item>The time distance between two bits</item><item>The numerator of the meter of the score</item><item>The number of the score measures</item>

        <item>570 cm</item><item>550 cm</item><item>600 cm</item><item>500 cm</item>

        <item>Appx. 1700 years old</item><item>Appx. 1600 years old</item><item>Appx. 2100 years old</item><item>Appx. 2000 years old</item>

        <item>01111011</item><item>10110001</item><item>11101001</item><item>11101101</item>

        <item>30</item><item>47</item><item>33</item><item>27</item>

        <item>Ozone</item><item>Carbon dioxide</item><item>Sulfur oxide IV</item><item>Water vapor</item>

        <item>76 million</item><item>760 thousand</item><item>760 million</item><item>7600 thousand</item>

        <item>the abscissa</item><item>the location of x</item><item>the sign of x</item><item>the absolute value of x</item>

        <item>417</item><item>4170</item><item>42</item><item>471</item>

        <item>5.211</item><item>3.448</item><item>1.692</item><item>1</item>

        <item>Because they have a different value</item><item>Because we are accustomed to this definition</item><item>Because they have different bases of numbers</item><item>Because 1 minute is composed of 60 sec</item>

        <item>50</item><item>100</item><item>10</item><item>60</item>

        <item>2013</item><item>2003</item><item>2005</item><item>2009</item>

        <item>890 minutes</item><item>16 hours</item><item>21 hours</item><item>14 hours 24 minutes</item>

        <item>50 km</item><item>5000 km</item><item>500 km</item><item>50.000 km</item>

        <item>Trend surface analysis</item><item>Cluster analysis</item><item>Factor analysis</item><item>Surveying small areas</item>
    </string-array>
    <string-array name="level2_a" formatted="false">
        <item>0,48 M</item>
        <item>25 ml</item>
        <item>7 inches</item>
        <item>The center of gravity</item>
        <item>ab=a+ba</item>
        <item>cheese, potato, cereals, soy</item>
        <item>12%</item>
        <item>FogScript</item>
        <item>double</item>
        <item>with pin and plumb</item>
        <item>Scratch</item>
        <item>The central angle that remains constant</item>
        <item>The time distance between two bits</item>
        <item>570 cm</item>
        <item>Appx. 1600 years old</item>
        <item>11101001</item>
        <item>33</item>
        <item>Carbon dioxide</item>
        <item>7600 thousand</item>
        <item>the absolute value of x</item>
        <item>417</item>
        <item>3.448</item>
        <item>Because they have different bases of numbers</item>
        <item>60</item>
        <item>2005</item>
        <item>16 hours</item>
        <item>500 km</item>
        <item>Surveying small areas</item>
    </string-array>
    <string name="school1" translatable="false">\nBorupgaard Gymnasium
        <a href="www.borupgaard-gym.dk" target="_top">www.borupgaard-gym.dk</a>\n
    </string>
    <string name="school2" translatable="false">\nΓΕΝΙΚΟ ΛΥΚΕΙΟ ΑΓΡΙΑΣ
        <a href="www.lykeioagrias.blogspot.hu" target="_top">www.lykeioagrias.blogspot.hu</a>\n
    </string>
    <string name="school3" translatable="false">\nPetrik Lajos Két Tanítási Nyelvű Vegyipari, Környezetvédelmi és Informatikai Szakgimnázium
        <a href="www.petrik.hu" target="_top">www.petrik.hu</a>\n
    </string>
    <string name="school4" translatable="false">\nScuole Liceo Scientifico Statale B. Rosetti
        <a href="www.liceorosetti.gov.it" target="_top">www.liceorosetti.gov.it</a>\n
    </string>
    <string name="school5" translatable="false">\nUtenos Dauniškio gimnazija
        <a href="www.dauniskis.utena.lm.lt" target="_top">www.dauniskis.utena.lm.lt</a>\n
    </string>
    <string name="school6" translatable="false">\nZespół Szkół w Głogowie Małopolskim
        <a href="www.zs.glogow-mlp.pl" target="_top">www.zs.glogow-mlp.pl</a>\n
    </string>
    <string name="school7" translatable="false">\nAgrupamento de Escolas Anselmo de Andrade
        <a href="www.anselmodeandrade.pt" target="_top">www.anselmodeandrade.pt</a>\n
    </string>
    <string name="school8" translatable="false">\nColegiul Tehnic Ana Aslan
        <a href="www.colegiulaslancluj.ro" target="_top">www.colegiulaslancluj.ro</a>\n
    </string>
    <string name="developers" translatable="false">
        \nMobile developer:\n
                Merényi Miklós\n
        \nWebsite developer:\n
                Puskás Dávid
    </string>
    <string name="inventor" translatable="false">
        \nDesigner:\n
            Miguel Rodrigues\n
    </string>
    <string name="school" translatable="false">
        \nThe App questions are a joint work of the teachers and students of the following Partner Schools:\n
    </string>
    <string name="newgame">New Game</string>
    <string name="continuee">Continue</string>
    <string name="credits">Credits</string>
    <string name="options">Options</string>
    <string name="share">Share Us</string>
</resources>