<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hatter3"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developers"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:id="@+id/elso"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inventor"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:id="@+id/masodik"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:textStyle="bold"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:id="@+id/school"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColorLink="@color/red"
        android:textAlignment="center"
        android:text="@string/school1"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:id="@+id/school1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColorLink="@color/red"
        android:textAlignment="center"
        android:text="@string/school2"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:id="@+id/school2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColorLink="@color/red"
        android:textAlignment="center"
        android:text="@string/school3"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:id="@+id/school3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColorLink="@color/red"
        android:textAlignment="center"
        android:text="@string/school4"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:id="@+id/school4"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColorLink="@color/red"
        android:textAlignment="center"
        android:text="@string/school5"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:id="@+id/school5"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColorLink="@color/red"
        android:textAlignment="center"
        android:text="@string/school6"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:id="@+id/school6"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColorLink="@color/red"
        android:textAlignment="center"
        android:text="@string/school7"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:id="@+id/school7"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColorLink="@color/red"
        android:textAlignment="center"
        android:text="@string/school8"
        android:textStyle="bold"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:id="@+id/school8"
        />

</LinearLayout>
    </ScrollView>

</LinearLayout>