<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/hatter3"
    >

    <TextView
        android:text="WELCOME"
        android:textStyle="bold"
        android:textColor="#eaf1ec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:id="@+id/welcome" />





    <TextView
        android:textSize="40dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name2"
        android:text="asd"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginBottom="90dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:text="@string/newgame"
            android:textColor="#f8f7f7"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:background="@drawable/mybutton"
            />

        <Button
            android:text="@string/continuee"
            android:textColor="#f8f7f7"
            android:textSize="20dp"
            android:layout_marginTop="21dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:background="@drawable/mybutton"
            />

        <Button
            android:text="@string/options"
            android:textColor="#f8f7f7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_option"
            android:textSize="20dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/mybutton"
            />

        <Button
            android:text="@string/credits"
            android:textColor="#f8f7f7"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:background="@drawable/mybutton"
            android:layout_marginTop="21dp"
            />

        <Button
            android:text="@string/share"
            android:textColor="#f8f7f7"
            android:layout_width="match_parent"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:background="@drawable/mybutton"
            android:layout_marginTop="21dp"

            />


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fb"
        android:id="@+id/fb"
        android:layout_marginBottom="21dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/welcome"
        android:layout_alignStart="@+id/welcome"
        android:clickable="true"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/erasmus"
        android:id="@+id/erasmus"
        android:clickable="true"
        android:layout_alignTop="@+id/fb"
        android:layout_alignRight="@+id/welcome"
        android:layout_alignEnd="@+id/welcome" />

</RelativeLayout>